; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_repository.c_git_repository__cleanup.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_repository.c_git_repository__cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @git_repository__cleanup(%struct.TYPE_10__* %0) #0 {
  %2 = alloca %struct.TYPE_10__*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %2, align 8
  %3 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %4 = call i32 @assert(%struct.TYPE_10__* %3)
  %5 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %6 = call i32 @git_repository_submodule_cache_clear(%struct.TYPE_10__* %5)
  %7 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %7, i32 0, i32 0
  %9 = call i32 @git_cache_clear(i32* %8)
  %10 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %11 = call i32 @git_attr_cache_flush(%struct.TYPE_10__* %10)
  %12 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %13 = call i32 @set_config(%struct.TYPE_10__* %12, i32* null)
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %15 = call i32 @set_index(%struct.TYPE_10__* %14, i32* null)
  %16 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %17 = call i32 @set_odb(%struct.TYPE_10__* %16, i32* null)
  %18 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %19 = call i32 @set_refdb(%struct.TYPE_10__* %18, i32* null)
  ret void
}

declare dso_local i32 @assert(%struct.TYPE_10__*) #1

declare dso_local i32 @git_repository_submodule_cache_clear(%struct.TYPE_10__*) #1

declare dso_local i32 @git_cache_clear(i32*) #1

declare dso_local i32 @git_attr_cache_flush(%struct.TYPE_10__*) #1

declare dso_local i32 @set_config(%struct.TYPE_10__*, i32*) #1

declare dso_local i32 @set_index(%struct.TYPE_10__*, i32*) #1

declare dso_local i32 @set_odb(%struct.TYPE_10__*, i32*) #1

declare dso_local i32 @set_refdb(%struct.TYPE_10__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
